--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </header>
     <div class="something">
-        <h2>Face font Freee</h2>
+        <h2>Face font Freee3</h2>
     </div>
     <footer>
 
