--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="header">
                 <div class="header__title">
-                    <h1>We Are Awesome Creative Agency</h1> 
+                    <h1>Ersin</h1> 
                 </div>
                 <div class="header__text">
                     This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
